--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h2 class="mid">About</h2>
     <hr>
     <p id="user-detail-intro">I am a web developer proficient in
-        Java Backend Technology and DSA, with an ever-growing passion for 
+        Java Backend Technology, Spring Framework, HTML, CSS, JavaScript, MySQL and DSA, with an ever-growing passion for 
         implementing and launching new projects that have tangible outcomes for others.
     Ability to work well in team-oriented and collaborative projects. Looking
         forward to working in a company to augment my skills and
