--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </p>
     <!-- In my free time, I enjoy listening to podcasts, and read about indian mythology. Other than that, I love dancing, music and travelling. -->
 <div id="aboutflex">
-    <a href="./Assets/Hoshiyar-Singh-Resume.pdf"  id="resume-button-2"  download>Resume <i class="fa fa-download"></i></a>
+    <a href="./Assets/Hoshiyar-Singh-Resume.pdf"  id="resume-link-2"  download>Resume <i class="fa fa-download"></i></a>
    
 <div id="con">
     
