--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a href="#skills" class="nav-link skills" >Skills</a>
 <a href="#projects" class="nav-link projects" >Projects</a>
 <a href="#contact" class="nav-link contact" >Contact</a>
-<a href="./Assets/Hoshiyar-Singh-Resume.pdf" class="nav-link resume" id="resume-button-1" download>Resume <i class="fa fa-download"></i></a>
+<a href="./Assets/Hoshiyar-Singh-Resume.pdf" class="nav-link resume" id="resume-link-1" download>Resume <i class="fa fa-download"></i></a>
 
 </div>
     </div>
