--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <a href="#skills" class="nav-link skills" >Skills</a>
 <a href="#projects" class="nav-link projects" >Projects</a>
 <a href="#contact" class="nav-link contact" >Contact</a>
-<a href="./Assets/Hoshiyar-Singh-Resume.pdf" class="nav-link resume" id="resume-link-1" download>Resume <i class="fa fa-download"></i></a>
-
+<button id="resume-button-1"><a href="./Assets/Hoshiyar-Singh-Resume.pdf"  id="resume-link-1"  download="Hoshiyar-Singh-Resume">Resume <i class="fa fa-download"></i></a></button> 
+   
 </div>
     </div>
 
@@ -78,7 +78,7 @@
         </p>
     <!-- In my free time, I enjoy listening to podcasts, and read about indian mythology. Other than that, I love dancing, music and travelling. -->
 <div id="aboutflex">
-    <a href="./Assets/Hoshiyar-Singh-Resume.pdf"  id="resume-link-2"  download>Resume <i class="fa fa-download"></i></a>
+   <button id="resume-button-2"><a href="./Assets/Hoshiyar-Singh-Resume.pdf"  id="resume-link-2"  download="Hoshiyar-Singh-Resume">Resume <i class="fa fa-download"></i></a></button> 
    
 <div id="con">
     
