--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a href="#skills" class="nav-link skills" >Skills</a>
 <a href="#projects" class="nav-link projects" >Projects</a>
 <a href="#contact" class="nav-link contact" >Contact</a>
-<button id="resume-button-2"><a href="./Assets/Hoshiyar-Singh-Resume.pdf" class="nav-link resume"  id="resume-link-2"  download="Hoshiyar-Singh-Resume">Resume <i class="fa fa-download"></i></a></button> 
+<button id="resume-button-1" class="nav-link resume"><a href="./Assets/Hoshiyar-Singh-Resume.pdf" class="nav-link resume"  id="resume-link-1"  download="Hoshiyar-Singh-Resume">Resume <i class="fa fa-download"></i></a></button> 
    
 </div>
     </div>
