--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     <div class="project-card" >
         <img src="https://user-images.githubusercontent.com/109987397/236569887-8214b120-29f1-4245-8783-69e9630b246b.png" alt="">
-        <p class="project-title">Monday.com Clone </p>
+        <p class="project-title">Tender Management System </p>
         <div class="project-description"> 
             <p> <b> Tender Management System </b> is an e-commerce Website primarily sales furniture as well home decors.</p>
             <p><b> Features : </b> The Tender Management System is a web-based application designed for companies to manage tenders, empaneled vendors, and bids. The system has two types of users: administrators and vendors. Administrators can create tenders, view vendors and tenders, Assign tenders to vendors. Vendors can view current tenders, Place Bids, view their bid history, and search for tenders by Tender-Id and Date Range.</p>
